[package]
name = "camo-core"
version = "0.1.1"
authors = ["philipahlberg <philipahlberg@gmail.com>"]
edition = "2018"
repository = "https://github.com/philipahlberg/camo"
homepage = "https://github.com/philipahlberg/camo"
documentation = "https://docs.rs/camo"
readme = "README.md"
license = "MIT"
categories = ["development-tools", "web-programming"]
description = "Core of camo, the foreign language interface generation library. Not intended to be used directly."

[dependencies]

[dev-dependencies]
