[package]
name = "camo-derive"
version = "0.0.0"
authors = ["philipahlberg <philipahlberg@gmail.com>"]
edition = "2018"
repository = "https://github.com/philipahlberg/camo"
homepage = "https://github.com/philipahlberg/camo"
documentation = "https://docs.rs/camo"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
description = "Camo derive macro"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
trybuild = "1.0"
camo = { version = "0.0", path = "../camo" }
