[package]
name = "camo-derive"
version = "0.1.1"
authors = ["philipahlberg <philipahlberg@gmail.com>"]
edition = "2018"
repository = "https://github.com/philipahlberg/camo"
homepage = "https://github.com/philipahlberg/camo"
documentation = "https://docs.rs/camo-derive"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
description = "Camo derive macro"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.108"

[dev-dependencies]
camo = { path = "../camo" }
trybuild = "1.0.77"
serde = { version = "1.0.152", features = ["derive"] }
