[package]
name = "camo-derive"
version = "0.4.0"
authors = ["philipahlberg <philipahlberg@gmail.com>"]
edition = "2018"
repository = "https://github.com/philipahlberg/camo"
homepage = "https://github.com/philipahlberg/camo"
documentation = "https://docs.rs/camo-derive"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
description = "Camo derive macro"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = "2.0.26"

[dev-dependencies]
camo = { path = "../camo" }
trybuild = "1.0.81"
serde = { version = "1.0.171", features = ["derive"] }
