[package]
name = "camo"
version = "0.2.0"
authors = ["philipahlberg <philipahlberg@gmail.com>"]
edition = "2018"
repository = "https://github.com/philipahlberg/camo"
homepage = "https://github.com/philipahlberg/camo"
documentation = "https://docs.rs/camo"
readme = "README.md"
license = "MIT"
categories = ["development-tools", "web-programming"]
description = "Foreign language interface generation"

[dependencies]
camo-core = { path = "../camo-core", version = "^0.2.0" }
camo-derive = { path = "../camo-derive", version = "^0.2.0", optional = true }
camo-typescript = { path = "../camo-typescript", version = "^0.2.0", optional = true }

[dev-dependencies]

[features]
default = ["derive"]
derive = ["camo-derive"]
typescript = ["camo-typescript"]
