[package]
name = "example-typescript"
version = "0.0.0"
authors = ["philipahlberg <philipahlberg@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
camo = { path = "../../camo", features = ["derive", "typescript"] }
serde = { version = "1.0.171", features = ["derive"] }
clap = { version = "4.3.15", features = ["derive"] }
